--- a/sitemaComercial/pom.xml
+++ b/sitemaComercial/pom.xml
@@ -4,4 +4,26 @@
   <artifactId>sitemaComercial</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>sitemaComercial</name>
+  
+  <properties>
+  	<java.version>11</java.version>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  	<maven.compiler.source>11</maven.compiler.source>
+  	<maven.compiler.target>11</maven.compiler.target>
+  </properties>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>org.junit.jupiter</groupId>
+  		<artifactId>junit-jupiter-api</artifactId>
+  		<version>5.7.1</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.junit.jupiter</groupId>
+  		<artifactId>junit-jupiter-engine</artifactId>
+  		<version>5.7.1</version>
+  		<scope>test</scope>
+  	</dependency>
+  </dependencies>
 </project>
